# git-hook-prnj-dev-branch-and-commit-message

./: .mise.toml  .pre-commit-hooks.yaml  README.md  pyproject.toml
prnj_dev_branch_and_commit_message/: __main__.py
tests/: test_hooks.py
